<resources>
    <string name="app_name">E-Wallet</string>

    <string name="sign_in">Đăng nhập</string>
    <string name="sign_up">Đăng kí</string>
    <string name="log_out">Đăng xuất</string>
    <string name="enter_username">Nhập tên người dùng</string>
    <string name="enter_phone_number">Nhập số điện thoại</string>
    <string name="enter_password">Nhập mật khẩu</string>
    <string name="enter_new_password">Nhập mật khẩu mới</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="dont_have_account">Chưa có tài khoản?</string>
    <string name="already_have_account">Đã có tài khoản?</string>

    <string name="home">Trang chủ</string>
    <string name="history">Lịch sử</string>
    <string name="person">Cá nhân</string>

    <string name="username">Tên người dùng</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="gender">Giới tính</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="birthday">Ngày sinh</string>
    <string name="account">Tài khoản: </string>
    <string name="balance">Số dư: </string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="new_password">Mật khẩu mới</string>

    <string name="functions">Chức năng</string>
    <string name="banking">Chuyển tiền</string>
    <string name="deposit">Nạp tiền</string>

    <string name="edit_info">Chỉnh sửa thông tin</string>
    <string name="change_password">Thay đổi mật khẩu</string>
    <string name="save">Lưu</string>

    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="password_too_short">Password must be at least 6 characters</string>
    <string name="wrong_phone_or_password">Wrong phone number or password</string>
    <string name="failed_to_load_user_info">Failed to load user information</string>
    <string name="enter_transaction_info">Enter transaction information</string>
    <string name="enter_receiver_account">Enter receiver account</string>
    <string name="enter_amount">Enter amount</string>
    <string name="enter_message">Enter message</string>
    <string name="please_enter_all_information">Please enter all information</string>

    <string name="default_message_transaction">%s chuyển tiền tới %s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>