<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color_theme"
    android:orientation="vertical"
    tools:context=".TransactionActivity">

    <ImageView
        android:id="@+id/img_btn_back"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_margin="@dimen/normal_margin"
        android:padding="@dimen/textview_padding"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_keyboard_return_24"
        app:tint="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="@dimen/textview_padding"
        android:text="@string/enter_transaction_info"
        android:textColor="@color/white"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtReceiverAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/small_margin"
        android:layout_marginTop="@dimen/huge_margin"
        android:background="@color/edit_text_background"
        android:hint="@string/enter_receiver_account"
        android:inputType="phone"
        android:padding="@dimen/textview_padding"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text_size" />

    <TextView
        android:id="@+id/txtReceiverAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginHorizontal="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:padding="1dp"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_text_size"
        android:textStyle="bold"
        android:visibility="gone" />

    <EditText
        android:id="@+id/edtAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/small_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:background="@color/edit_text_background"
        android:hint="@string/enter_amount"
        android:inputType="number"
        android:padding="@dimen/textview_padding"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text_size" />

    <EditText
        android:id="@+id/edtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/small_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:background="@color/edit_text_background"
        android:hint="@string/enter_message"
        android:padding="@dimen/textview_padding"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text_size" />


    <Button
        android:id="@+id/btn_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/large_margin"
        android:layout_marginVertical="@dimen/huge_margin"
        android:backgroundTint="@color/button_background"
        android:text="@string/banking"
        android:textColor="@color/white"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardview3" />

</LinearLayout>