<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color_theme"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding"
    tools:context=".ChangePasswordActivity">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_btn_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginHorizontal="@dimen/normal_margin"
            android:padding="@dimen/textview_padding"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_keyboard_return_24"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/textview_padding"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/small_margin"
            android:padding="1dp"
            android:text="@string/old_password"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text_size"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/edt_old_password"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edt_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/small_margin"
            android:layout_marginTop="@dimen/huge_margin"
            android:background="@color/edit_text_background"
            android:hint="@string/enter_password"
            android:padding="@dimen/textview_padding"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/small_margin"
            android:padding="1dp"
            android:text="@string/new_password"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text_size"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/edt_new_password"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edt_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/small_margin"
            android:layout_marginTop="@dimen/huge_margin"
            android:background="@color/edit_text_background"
            android:hint="@string/enter_new_password"
            android:padding="@dimen/textview_padding"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_old_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/small_margin"
            android:padding="1dp"
            android:text="@string/confirm_password"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text_size"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/edt_confirm_password"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/small_margin"
            android:layout_marginTop="@dimen/huge_margin"
            android:background="@color/edit_text_background"
            android:hint="@string/confirm_password"
            android:padding="@dimen/textview_padding"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_new_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/huge_margin"
        android:layout_marginVertical="@dimen/activity_padding"
        android:backgroundTint="@color/red"
        android:text="@string/save"
        android:textSize="@dimen/normal_text_size"
        android:textStyle="bold" />

</LinearLayout>