<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color_theme"
    android:padding="@dimen/activity_padding"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:padding="@dimen/textview_padding"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/header_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/large_margin"
        android:layout_marginVertical="@dimen/huge_margin"
        app:cardCornerRadius="@dimen/edittext_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <EditText
            android:id="@+id/edt_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/edit_text_background"
            android:hint="@string/enter_phone_number"
            android:inputType="phone"
            android:padding="@dimen/textview_padding"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/large_margin"
        android:layout_marginVertical="@dimen/normal_margin"
        app:cardCornerRadius="@dimen/edittext_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview">

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/edit_text_background"
            android:hint="@string/enter_password"
            android:inputType="numberPassword"
            android:padding="@dimen/textview_padding"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/large_margin"
        android:layout_marginVertical="@dimen/normal_margin"
        app:cardCornerRadius="@dimen/edittext_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview2">

        <EditText
            android:id="@+id/edt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/edit_text_background"
            android:hint="@string/confirm_password"
            android:inputType="numberPassword"
            android:padding="@dimen/textview_padding"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/huge_margin"
        android:layout_marginVertical="@dimen/large_margin"
        android:backgroundTint="@color/button_background"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardview3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/large_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/btn_signUp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/textview_padding"
            android:text="@string/already_have_account"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text_size" />

        <TextView
            android:id="@+id/txtSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/textview_padding"
            android:padding="@dimen/textview_padding"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>